Archive2/5b/f5a91fe10cd29d/output
main.cpp: In member function 'void bf::Machine<CharT, N>::run(const string&, std::istream&, std::ostream&)':
main.cpp:20:22: error: 'c' was not declared in this scope
              switch (c) {
                      ^
